# LAT062-Admin-Actuarial-de-Riesgos

./: .gitignore  CreditMetrics 2 bonos no correlacionados 2025 - Copy.xlsx  CreditMetrics 2 bonos no correlacionados 2025.xlsx
Tarea 1/: EjercicioV.ipynb  EjercicioV.xlsx  portafolio.xlsx
Tarea 1/latex/: Diagrama.tex  Linea del Tiempo.tex  main.aux  main.tex  main.toc
Tarea 1/latex/7/: ej.tex
Tarea 2/Diagrama_Ej2/: main.aux  main.fdb_latexmk  main.fls  main.tex
Tarea 2/Diagrama_Ej3/: diagrama.fdb_latexmk  diagrama.fls  diagrama.tex
Tarea 2/Diagrama_Ej6/: main.fdb_latexmk  main.fls  main.tex
creditmetrics_project/: README.md  pyproject.toml
creditmetrics_project/latex_report/: build.ps1  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv
creditmetrics_project/latex_report/sections/: 01_objetivo.tex  02_codigo.tex  03_metodologia.tex  04_resultados.tex  05_interpretacion.tex  06_compilacion.tex
creditmetrics_project/outputs/: bono_a_menos_distribucion.csv  bono_b_menos_distribucion.csv  bono_bbb_menos_distribucion.csv  bruteforce_escenarios.csv  cola_0_1pct.csv  comparacion_convolucion_vs_bruteforce.csv  convolucion_1_bono_a_menos.csv  convolucion_2_bonos.csv  portafolio_distribucion_bruteforce.csv  resultados_creditmetrics.xlsx  resumen_ejecucion.txt  summary.json
creditmetrics_project/src/creditmetrics_project/: __init__.py  data.py  main.py  model.py
creditmetrics_project/src/creditmetrics_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
creditmetrics_project/tests/: test_model.py
(+78 files in other folders)
